--- a/Client/package.json
+++ b/Client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "epic-game",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.2",
+    "next": "12.3.1",
+    "react": "18.2.0",
+    "react-bootstrap": "^2.6.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "rxjs": "^7.5.7",
+    "web3": "^1.8.1"
+  },
+  "devDependencies": {
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
-    "eslint-config-next": "13.0.2",
-    "next": "13.0.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "eslint-config-next": "12.3.1",
     "typescript": "4.8.4"
   }
 }
